Fixed login page and dialog input alignment issue.

--- a/Secret-Santa-UI/src/pages/HomePage.css
+++ b/Secret-Santa-UI/src/pages/HomePage.css
@@ -1,6 +1,6 @@
 /* HomePage Container */
 .home-container {
-    background-image: url('https://png.pngtree.com/thumb_back/fh260/background/20220207/pngtree-composite-image-of-santa-keeping-a-secret-man-brick-festive-photo-image_29145552.jpg');
+    background-image: url('../assets/bg.png');
     background-size: cover;
     background-position: center;
     height: 100vh;
@@ -14,34 +14,73 @@
     transition: 0.5s;
 }
 
+.home-container {
+    background-image: url('../assets/bg.png');
+    background-size: cover; /* Ensures the image covers the container */
+    background-position: center; /* Keeps the image centered */
+    height: 100vh; /* Ensures the container takes full viewport height */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+
+    /* Make sure the background image adapts on smaller screens */
+    background-attachment: fixed; /* Optional: makes the background fixed when scrolling */
+}
+
+/* Add media query for smaller screen sizes */
+@media (max-width: 768px) {
+    .home-container {
+        background-position: left; /* Position the image top-center for better fit */
+    }
+}
+
 /* Content styling */
 .content {
-    background-color: rgba(155, 145, 145, 0.2);
+    background-color: rgba(155, 145, 145, 0.4);
     padding: 7rem;
     border-radius: 10px;
     color: #888181;
     max-height: 600px;
-    width: 100%;
-    height: 30%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     margin-left: 20%;
     transition: margin-top 0.5s ease;
+    animation: enlargeShrink 1.5s infinite ease-in-out;
 }
 
-/* Heading styling */
-.content h2 {
+@keyframes enlargeShrink {
+    0%, 100% {
+        transform: scale(1); /* Original size */
+    }
+    50% {
+        transform: scale(1.08); /* Enlarge slightly */
+    }
+}
+
+@keyframes popUpDown {
+    0%, 100% {
+        transform: translateY(0); /* Original position */
+    }
+    50% {
+        transform: translateY(-10px); /* Move up slightly */
+        ackground-color: rgba(155, 145, 145, 0.8);
+    }
+}
+
+
+.content-heading {
     font-size: 2rem;
-    margin-bottom: 1rem;
-    color: #1e1b1b94;
+    font-weight: 700;
+    color: #191212b5;
 }
 
-.content p {
-    font-size: 1.2rem;
-    color: #6e7175;
-    margin-top: inherit;
+.content-sub-heading {
+    font-size: 1rem;
+    font-weight: 700;
+    color: #191212b5 !important;
 }
 
 /* Start Now Button styling */
