--- a/Secret-Santa-UI/src/pages/auth/login/LoginPage.css
+++ b/Secret-Santa-UI/src/pages/auth/login/LoginPage.css
@@ -1,6 +1,6 @@
 /* Main container */
 .container {
-    background-image: url('../../../assets/bg.jpg');
+    background-image: url('../../../assets/bg.png');
     background-size: cover;
     background-position: center;
     height: 100vh;
@@ -8,11 +8,22 @@
     justify-content: center;
     align-items: center;
     text-align: center;
+
+    background-attachment: fixed;
 }
+
+/* Add media query for smaller screen sizes */
+@media (max-width: 768px) {
+    .container {
+        background-size: contain;
+        background-position: left;
+    }
+}
+
 
 /* Form wrapper */
 form {
-    background-color: rgba(155, 145, 145, 0.2);
+    background-color: rgba(155, 145, 145, 0.3);
     padding: 3rem;
     border-radius: 10px;
     color: #888181;
@@ -73,7 +84,7 @@ div {
     padding: 16px 20px;
     border-radius: 26px;
     border: 1px solid #D4D3E8;
-    color: #5F6D7C;
+    color: #4C489D;;
     cursor: pointer;
     transition: 0.2s;
     text-transform: uppercase;
@@ -86,7 +97,7 @@ div {
 }
 
 .signup{
-    background-color: #5F6D7C;
+    background-color: #4C489D;
     color: white;
 }
 
